<?xml version="1.0" encoding="utf-8"?>


  <android.support.v4.widget.NestedScrollView
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/recipe_activity_nsv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        >

      <TextView
          android:id="@+id/recipe_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="32dp"
          android:contentDescription="@string/recipe_name_content_desc"
          android:fontFamily="@font/playfairdisplay_regular"
          android:lineSpacingExtra="-20sp"
          android:paddingLeft="10dp"
          android:paddingRight="10dp"
          android:text="@string/recipe_name_placeholder_text"
          android:textAlignment="center"
          android:textColor="@android:color/black"
          android:textSize="60sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="parent
"
          tools:text="Nutella Pie With A Dash Of Something"
          />
      <TextView
          android:id="@+id/servings_tv"
          android:layout_width="wrap_content"
          android:layout_height="14dp"
          android:layout_marginEnd="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:contentDescription="@string/servings_tv_content_desc"
          android:text="@string/servings_tv_placeholder_text"
          android:textAppearance="@style/TextAppearance.AppCompat.Caption"
          app:layout_constraintEnd_toEndOf="@+id/recipe_name"
          app:layout_constraintStart_toStartOf="@+id/recipe_name"
          app:layout_constraintTop_toBottomOf="@+id/recipe_name"
          tools:text="SERVINGS: 8"
          />
      <com.google.android.exoplayer2.ui.SimpleExoPlayerView
          android:id="@+id/playerView"
          android:layout_width="wrap_content"
          android:layout_height="250dp"
          android:layout_marginEnd="12dp"
          android:layout_marginStart="12dp"
          android:layout_marginTop="16dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@id/servings_tv"
          />
      <android.support.v7.widget.RecyclerView
          android:id="@+id/ingredient_recyclerView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="12dp"
          android:layout_marginStart="12dp"
          android:layout_marginTop="16dp"
          android:paddingBottom="100dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/playerView"
          tools:listitem="@layout/ingredient_list_item"
          />


    </android.support.constraint.ConstraintLayout>

  </android.support.v4.widget.NestedScrollView>



